--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       <!-- start of body -->
         <!-- start of body -->
           <body>
-
-
+          </body>
+  <!-- End of body -->
 
           
             
