--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               window.$docsify = {
                 name: '',
                 repo: ''，
-                loadSidebar: true ，
+                loadSidebar: false ，
                 coverpage: true
                   
                 
