--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 name: '',
                 repo: ''，
                 loadSidebar: false ，
-                coverpage: true
+                coverpage: false
                   
                 
                 //  复制封面标题 开始
