--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </script>
             
             <!-- Docsify v4 -->
-            <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+           </script>
           </body>
         <!-- End of body -->
     </html>
