--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
 
 
             <script>
-            
+            window.$docsify = {
+                name: '',
+                repo: ''，
+                loadSidebar: false ，
+                coverpage: false
+              }
             </script>
              
             <!-- Docsify v4 -->
