--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
 
 
 
-            <div id="app"></div>
+            
 
             <script>
+                window.$docsify = {
+                  name: '',
+                  repo: ''，
+                  loadSidebar: false ，
+                  coverpage: false 
+                  }
               <!-- Docsify v4 -->
               <script src="//cdn.jsdelivr.net/npm/docsify@4">
             </script>
