--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                   loadSidebar: false ，
                   coverpage: false 
                   }
+            </script>
               <!-- Docsify v4 -->
               <script src="//cdn.jsdelivr.net/npm/docsify@4">
             </script>
